--- a/systemd/system/flatcar-setup-environment.service
+++ b/systemd/system/flatcar-setup-environment.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=Modifies /etc/environment for CoreOS
-RequiresMountsFor=/usr/share/oem
-ConditionPathExists=/usr/share/oem/bin/flatcar-setup-environment
+RequiresMountsFor=/oem
+ConditionPathExists=/oem/bin/flatcar-setup-environment
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/share/oem/bin/flatcar-setup-environment /etc/environment
+ExecStart=/oem/bin/flatcar-setup-environment /etc/environment
 
 [Install]
 WantedBy=multi-user.target
