systemd/system: start sshkeys for openstack
it's enabled from the OEM initially.

Signed-off-by: Mathieu Tortuyaux <mtortuyaux@microsoft.com>

--- a/systemd/system/sshkeys.service
+++ b/systemd/system/sshkeys.service
@@ -15,6 +15,10 @@ ConditionKernelCommandLine=|ignition.platform.id=gce
 ConditionKernelCommandLine=|flatcar.oem.id=gce
 ConditionKernelCommandLine=|coreos.oem.id=gce
 
+ConditionKernelCommandLine=|ignition.platform.id=openstack
+ConditionKernelCommandLine=|flatcar.oem.id=openstack
+ConditionKernelCommandLine=|coreos.oem.id=openstack
+
 [Service]
 Type=oneshot
 RemainAfterExit=yes
