Draft for Proxmox support
This makes use of https://github.com/coreos/afterburn/pull/1023
to set up the ssh keys from the metadata.

--- a/systemd/system/sshkeys.service
+++ b/systemd/system/sshkeys.service
@@ -24,6 +24,8 @@ ConditionKernelCommandLine=|ignition.platform.id=openstack
 ConditionKernelCommandLine=|flatcar.oem.id=openstack
 ConditionKernelCommandLine=|coreos.oem.id=openstack
 
+ConditionKernelCommandLine=|flatcar.oem.id=proxmoxve
+
 [Service]
 Type=oneshot
 RemainAfterExit=yes
